MarioKart/bin/MarioKart/Grammar/Grammar.bnf
//Andy Garcha
//https://github.com/andykasen13/Programming-Languages

program ::= statementList

statementList ::= statement+

block ::= "{" statementList "}"

statement ::= functionCall
            | assignment
            | conditionalStatement
            | loopStatement
            | functionDefinition
            | initialization
            | variableDeclaration

expression ::= binaryExpression
             | primary
             | unaryExpression

parenthesizedExpression ::= "(" expression* ")" ";"

binaryExpression ::= primary binaryOperator primary ";"

binaryOperator ::= simpleMathOperator 
                 | comparator 
                 | booleanOperators

unaryExpression ::= primary unaryPostOperator ";"
                  | unaryPreOperator primary ";"

assignment ::= IDENTIFIER "=" primary

conditionalStatement ::= "if" "(" expression ")" block

loopStatement ::= "while" "(" expression ")" block
                | "for" "(" expression ")" block

variableDeclaration ::= dataType IDENTIFIER ";"

initialization ::= dataType IDENTIFIER "=" primary ";"

functionCall ::= IDENTIFIER "(" parameter* ")" ";"

functionDefinition ::= dataType IDENTIFIER "(" (dataType IDENTIFIER)* ")" block

simpleMathOperator ::= "+" 
                     | "-" 
                     | "*" 
                     | "/" 
                     | "%"

unaryPostOperator ::= "++" 
                    | "--"

unaryPreOperator ::= "!" 
                   | "-"

booleanOperators ::= "&" 
                   | "|"

dataType ::= "String" 
           | "int" 
           | "float" 
           | "boolean" 
           | "char"

comparator ::= ">" | "<" | ">=" | "<=" | "==" | "!="

primary ::= NUMBER
          | STRING
          | IDENTIFIER
          | booleanLiteral
          | functionCall
          | parenthesizedExpression
          
booleanLiteral ::= "false" | "true"
